# Spaceplanning_ADSK_PW

./: .gitignore  DynamoStudio.psess  README.md  SpacePlanning.sln
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/lsystem/: CMakeLists.txt  Dockerfile  README.md
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/lsystem/lib/libplsys/include/: LSystem.h  LSystemGenerator.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/lsystem/lib/libplsys/src/: LSystem.cpp  LSystemRulesEngine.cpp  LSystemRulesEngine.h  ProductionRule.cpp  RuleString.cpp  RuleToken.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/lsystem/src/: BuildingGenerator.cpp  BuildingGenerator.h  GeneratorListener.cpp  GeneratorListener.h  SpaceLayout.cpp  SpaceLayout.h  main.cpp  stdafx.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/: CMakeLists.txt  Dockerfile  Stuffer.sln
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/: Stuffer.vcxproj  Stuffer.vcxproj.filters  packages.config
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Application/: Stuffer.cpp  StufferDlg.cpp  stdafx.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Application/Include/: StufferDlg.h  stdafx.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Application/Resources/: Stuffer.rc  Stuffer.rc2  resource.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Casablanca/: GeneratorListener.cpp  JSONUtil.cpp  JobRequest.cpp  LayoutJob.cpp  SpaceLayout.cpp  StufferJob.cpp  StufferListener.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Casablanca/Include/: GeneratorListener.h  JSONUtil.h  JobRequest.h  LayoutJob.h  SpaceLayout.h  StufferJob.h  StufferListener.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Display/: D2DContext.cpp  D2DDisplay.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Display/Include/: D2DContext.h  D2DDisplay.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Display/Include/API/: DisplayAppAPI.h  DisplayContextAPI.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Analyzer/: UsageAnalyzer.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Analyzer/Include/: Analyzer.h  UsageAnalyzer.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Display/: GeneratorGraphics.cpp  GridContext.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Display/Include/: GeneratorGraphics.h  GridContext.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Genotype/: Genome.cpp  Ribosome.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Genotype/Include/: Genome.h  RangeTable.h  Ribosome.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Optimizer/: HillClimbingOptimizer.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Optimizer/Include/: HillClimbingOptimizer.h  Optimizer.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Phenotype/: Adjacency.cpp  AdjacencyGraph.cpp  Floor.cpp  Phenotype.cpp  Section.cpp  Usage.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Phenotype/Include/: Adjacency.h  AdjacencyGraph.h  Floor.h  Phenotype.h  Section.h  Usage.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Plan/: Area.cpp  Args.cpp  BuildData.cpp  Cell.cpp  CellHelperConnectedUp.cpp  CellHelperNotClaimed.cpp  CellScanner.cpp  EdgeVisitor.cpp  JobData.cpp  Plan.cpp  Shaft.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Plan/Include/: Area.h  Args.h  BuildData.h  Cell.h  CellHelper.h  CellHelperConnectedUp.h  CellHelperNotClaimed.h  CellScanner.h  CellVisitor.h  EdgeVisitor.h  JobData.h  Plan.h  Shaft.h  Strategy.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Shell/: Axis.cpp  Grid.cpp  Level.cpp  RectShell.cpp  STLShell.cpp  STLxShell.cpp  Shell.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Shell/Include/: Axis.h  Grid.h  Level.h  RectShell.h  STLShell.h  STLxShell.h  Shell.h
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Strategy/BuildData/: AreaDivisionStrategy.cpp  EdgeSpacesStrategy.cpp  LevelConnectionStrategy.cpp  OutdoorConnectionStrategy.cpp  RingHallwayStrategy.cpp
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Strategy/Phenotype/: CreateSpaceStrategy.cpp  CreateStairsStrategy.cpp  SetUsageStrategy.cpp  (+5 more)
03 DYNAMO RESOURCES/Akaba-build-production/Akaba-build-production/services/generators/stuffer/Stuffer/Generator/Vision/: BuildingCoreVision.cpp  DominoVision.cpp  EdgeEffectTestVision.cpp  ShellAndCoreVision.cpp  StackedVision.cpp  StairPlacementVision.cpp  TrapelloVision.cpp  Vision.cpp  XYVision.cpp
(+704 files in other folders)
